changed the data-model values to represent new img structure

--- a/index.html
+++ b/index.html
@@ -29,8 +29,8 @@
                     </div>
                     <div class="previewSelectContainer">
                         <img src="./monolithImg/TOP/M330 AETHERA - TOP.jpg" alt="" data-model="top" id="topModel" class="previewModel">
-                        <img src="./monolithImg/SIDE TILT/M330 AETHERA - SIDE TILT.jpg" alt="" data-model="side" id="sideModel" class="previewModel">
-                        <img src="./monolithImg/FRONT TILT - NO MOUSE/M330 AETHERA FRONT TILT.jpg" alt="" data-model="front" id="frontModel" class="previewModel">
+                        <img src="./monolithImg/SIDE TILT/M330 AETHERA - SIDE TILT.jpg" alt="" data-model="sideTilt" id="sideModel" class="previewModel">
+                        <img src="./monolithImg/FRONT TILT - NO MOUSE/M330 AETHERA FRONT TILT.jpg" alt="" data-model="frontTilt" id="frontModel" class="previewModel">
                         <img src="./monolithImg/SLANTED/M330 AETHERA - SLANTED.jpg" alt="" data-model="slanted" id="slantedModel" class="previewModel">
                         <img src="./monolithImg/MISC/AETHERA - CLOSE UP.jpg" alt="" data-model="corner" id="cornerModel" class="previewModel">
                         <img src="./monolithImg/PACKAGE/M330 AETHERA - PKG.jpg" alt="" data-model="package" id="packageModel" class="previewModel">
@@ -40,8 +40,8 @@
                     <div class="selectWrap">
                         <h3>Size</h3>
                         <select name="" id="" class="sizeSelect">
-                            <option value="330">M330 (Normal)</option>
-                            <option value="508">M508 (Large)</option>
+                            <option value="m330">M330 (Normal)</option>
+                            <option value="m508">M508 (Large)</option>
                         </select>
                     </div>
                     <button class="buyBtn">Buy</button>
