added some images with the proper size and naming / folder structure

--- a/index.html
+++ b/index.html
@@ -12,15 +12,15 @@
     <div class="container">
         <div class="modal">
             <div class="styleContainer">
-                <img src="./monolithImg/TOP/M330 AETHERA - TOP.jpg" alt="Athera" data-style="athera" class="mpStyle">
-                <img src="./monolithImg/TOP/M330 CLASSIC - TOP.jpg" alt="Classic" data-style="classic" class="mpStyle">
-                <img src="./monolithImg/TOP/M330 CLOVA - TOP.jpg" alt="Clova" data-style="clova" class="mpStyle">
-                <img src="./monolithImg/TOP/M330 NIGHTSCHOOL - TOP.jpg" alt="Night School" data-style="nightSchool" class="mpStyle">
-                <img src="./monolithImg/TOP/M330 REDSHIFT - TOP.jpg" alt="Red Shift" data-style="redShift" class="mpStyle">
-                <img src="./monolithImg/TOP/M330 SLIME - TOP.jpg" alt="Slime" data-style="slime" class="mpStyle">
-                <img src="./monolithImg/TOP/M330 SMOKESCREEN - TOP.jpg" alt="Smoke Screen" data-style="smokeScreen" class="mpStyle">
-                <img src="./monolithImg/TOP/M330 SUMMERSCHOOL - TOP.jpg" alt="Summer School" data-style="summerSchool" class="mpStyle">
-                <img src="./monolithImg/TOP/M330 WAKE UP CALL - TOP.jpg" alt="Wake Up Call" data-style="wakeUpCall" class="mpStyle">
+                <img src="./assets/top/m330-aethera.jpg" alt="Athera" data-style="athera" class="mpStyle">
+                <img src="./assets/top/m330-classic.jpg" alt="Classic" data-style="classic" class="mpStyle">
+                <img src="./assets/top/m330-clova.jpg" alt="Clova" data-style="clova" class="mpStyle">
+                <img src="./assets/top/m330-nightSchool.jpg" alt="Night School" data-style="nightSchool" class="mpStyle">
+                <img src="./assets/top/m330-redShift.jpg" alt="Red Shift" data-style="redShift" class="mpStyle">
+                <img src="./assets/top/m330-slime.jpg" alt="Slime" data-style="slime" class="mpStyle">
+                <img src="./assets/top/m330-smokeScreen.jpg" alt="Smoke Screen" data-style="smokeScreen" class="mpStyle">
+                <img src="./assets/top/m330-summerSchool.jpg" alt="Summer School" data-style="summerSchool" class="mpStyle">
+                <img src="./assets/top/m330-wakeupCall.jpg" alt="Wake Up Call" data-style="wakeUpCall" class="mpStyle">
             </div>
             <div class="optionContainer">
                 <div class="imgAndViewContainer">
@@ -28,12 +28,12 @@
                         <img src="" alt="" class="preview" />
                     </div>
                     <div class="previewSelectContainer">
-                        <img src="./monolithImg/TOP/M330 AETHERA - TOP.jpg" alt="" data-model="top" id="topModel" class="previewModel">
-                        <img src="./monolithImg/SIDE TILT/M330 AETHERA - SIDE TILT.jpg" alt="" data-model="sideTilt" id="sideModel" class="previewModel">
-                        <img src="./monolithImg/FRONT TILT - NO MOUSE/M330 AETHERA FRONT TILT.jpg" alt="" data-model="frontTilt" id="frontModel" class="previewModel">
-                        <img src="./monolithImg/SLANTED/M330 AETHERA - SLANTED.jpg" alt="" data-model="slanted" id="slantedModel" class="previewModel">
-                        <img src="./monolithImg/MISC/AETHERA - CLOSE UP.jpg" alt="" data-model="corner" id="cornerModel" class="previewModel">
-                        <img src="./monolithImg/PACKAGE/M330 AETHERA - PKG.jpg" alt="" data-model="package" id="packageModel" class="previewModel">
+                        <img src="./assets/top/m330-aethera.jpg" alt="" data-model="top" id="topModel" class="previewModel">
+                        <img src="./assets/sideTilt/m330-aethera.jpg" alt="" data-model="sideTilt" id="sideModel" class="previewModel">
+                        <img src="./assets/frontTilt/m330-aethera.jpg" alt="" data-model="frontTilt" id="frontModel" class="previewModel">
+                        <img src="./assets/slanted/m330-aethera.jpg" alt="" data-model="slanted" id="slantedModel" class="previewModel">
+                        <img src="./assets/corner/m330-aethera.jpg" alt="" data-model="corner" id="cornerModel" class="previewModel">
+                        <img src="./assets/package/m330-aethera.jpg" alt="" data-model="package" id="packageModel" class="previewModel">
                     </div>
                 </div>
                 <div class="btnSelectWrap">
