added all images for buy screen

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <div class="container">
         <div class="modal">
             <div class="styleContainer">
-                <img src="./assets/top/m330-athera.jpg" alt="Athera" data-style="athera" class="mpStyle">
+                <img src="./assets/top/m330-aethera.jpg" alt="Aethera" data-style="aethera" class="mpStyle">
                 <img src="./assets/top/m330-classic.jpg" alt="Classic" data-style="classic" class="mpStyle">
                 <img src="./assets/top/m330-clova.jpg" alt="Clova" data-style="clova" class="mpStyle">
                 <img src="./assets/top/m330-nightSchool.jpg" alt="Night School" data-style="nightSchool" class="mpStyle">
@@ -28,7 +28,7 @@
                         <img src="" alt="" class="preview" />
                     </div>
                     <div class="previewSelectContainer">
-                        <img src="./assets/top/m330-athera.jpg" alt="" data-model="top" id="topModel" class="previewModel">
+                        <img src="./assets/top/m330-aethera.jpg" alt="" data-model="top" id="topModel" class="previewModel">
                         <img src="./assets/sideTilt/m330-athera.jpg" alt="" data-model="sideTilt" id="sideModel" class="previewModel">
                         <img src="./assets/frontTilt/m330-athera.jpg" alt="" data-model="frontTilt" id="frontModel" class="previewModel">
                         <img src="./assets/slanted/m330-athera.jpg" alt="" data-model="slanted" id="slantedModel" class="previewModel">
