fixed bug where some 508 images weren't showing up

--- a/index.html
+++ b/index.html
@@ -25,15 +25,15 @@
             <div class="optionContainer">
                 <div class="imgAndViewContainer">
                     <div class="previewWrap">
-                        <img src="" alt="" class="preview" />
+                        <img src="./assets/top/m330-aethera.jpg" alt="" class="preview" />
                     </div>
-                    <div class="previewSelectContainer">
+                    <div class="previewSelectContainer" data-model="undefined">
                         <img src="./assets/top/m330-aethera.jpg" alt="" data-model="top" id="topModel" class="previewModel">
-                        <img src="./assets/sideTilt/m330-athera.jpg" alt="" data-model="sideTilt" id="sideModel" class="previewModel">
-                        <img src="./assets/frontTilt/m330-athera.jpg" alt="" data-model="frontTilt" id="frontModel" class="previewModel">
-                        <img src="./assets/slanted/m330-athera.jpg" alt="" data-model="slanted" id="slantedModel" class="previewModel">
-                        <img src="./assets/corner/m330-athera.jpg" alt="" data-model="corner" id="cornerModel" class="previewModel">
-                        <img src="./assets/package/m330-athera.jpg" alt="" data-model="package" id="packageModel" class="previewModel">
+                        <img src="./assets/sideTilt/m330-aethera.jpg" alt="" data-model="sideTilt" id="sideModel" class="previewModel">
+                        <img src="./assets/frontTilt/m330-aethera.jpg" alt="" data-model="frontTilt" id="frontModel" class="previewModel">
+                        <img src="./assets/slanted/m330-aethera.jpg" alt="" data-model="slanted" id="slantedModel" class="previewModel">
+                        <img src="./assets/corner/aethera.jpg" alt="" data-model="corner" id="cornerModel" class="previewModel">
+                        <img src="./assets/package/m330-aethera.jpg" alt="" data-model="package" id="packageModel" class="previewModel">
                     </div>
                 </div>
                 <div class="btnSelectWrap">
