Changed hero image, added goToAmazon function for buy button

--- a/index.html
+++ b/index.html
@@ -10,6 +10,12 @@
 </head>
 <body>
     <div class="container">
+        <nav class="header">
+            <img class="logo" src="./assets/general/logo.png" />
+            <div id="linkWrap">
+
+            </div>
+        </nav>
         <div class="modal">
             <div class="styleContainer">
                 <img src="./assets/top/m330-aethera.jpg" alt="Aethera" data-style="aethera" class="mpStyle">
@@ -54,10 +60,9 @@
         </div>
         <div class="hero">
             <div class="centerWrap">
-                <div class="logo">
-                    <img src="./monolithImg/Artboard 1.png" alt="">
-                </div>
-                <h1 class="title">MONOLITH GAMING</h1>
+                <span class="title">WE BRING</span>
+                <span class="title">A NEW STANDARD</span>
+                <span class="title">TO MOUSEPADS</span>
             </div>
         </div>
         <div class="main">
